--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <header class = "banner">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-xs-6 col-sm-12">
                     <div class="intro-text">
                         <p class="name">Open the door to new possibilities</p>
                           <hr class = "line-separator"></hr>
@@ -87,13 +87,13 @@
     <section class="banner" id="about">
         <div class="container about-container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-xs-12 text-center">
                     <h2>About</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12 inline-about">
+                <div class="col-xs-6 col-sm-12 inline-about">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <p>I am passionate about realizing web solutions through continuous learning. To me, one of the greatest moments of satisfaction is when you see the end result of a project you have built with your own ingenuity and perseverance. 
                         <br>
@@ -110,7 +110,7 @@
     <section id="portfolio">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-xs-12 text-center">
                     <h2>Portfolio</h2>
                     <hr class="star-primary">
                 </div>
@@ -184,13 +184,13 @@
     <section id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-xs-12 text-center">
                     <h2>Contact Me</h2>
                     <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-xs-8 col-xs-offset-2">
                     <form action="//formspree.io/jessewhadley@hotmail.com"
       method="POST">
 
@@ -242,11 +242,11 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-4">
+                    <div class="footer-col col-xs-12 col-sm-4">
                         <h3>Location</h3>
                         <p>Bountiful, UT</p>
                     </div>
-                    <div class="footer-col col-md-4">
+                    <div class="footer-col col-xs-12 col-sm-4">
                         <h3>Let's Connect</h3>
                         <ul class="list-inline">
                             <li>
@@ -266,7 +266,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="footer-col col-md-4">
+                    <div class="footer-col col-xs-12 col-sm-4">
                         <h3>Jesse Hadley Web Design</h3>
                         <p>For Web Development inquiries, please send me a message in the form above</p>
                     </div>
@@ -276,7 +276,7 @@
         <div class="footer-below">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-xs-12">
                         Copyright &copy; Jesse Hadley 2016
                     </div>
                 </div>
@@ -302,7 +302,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-xs-8 col-xs-offset-2">
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
@@ -339,7 +339,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-xs-8 col-xs-offset-2">
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
@@ -376,7 +376,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-xs-8 col-xs-offset-2">
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
@@ -413,7 +413,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-xs-8 col-xs-offset-2">
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
@@ -450,7 +450,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-xs-8 col-xs-offset-2">
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
@@ -487,7 +487,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-xs-8 col-xs-offset-2">
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
