--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     </nav>
 
     <!-- Header -->
-<div>
+<div class="banner">
     <header>
-      <div class="banner">
+      <div>
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-8">
@@ -87,7 +87,7 @@
 
     <!-- About Section -->
     <section id="about">
-        <div class="container banner">
+        <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 text-center">
                     <h2>About</h2>
