--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/imgages/portfolio.jpeg" class="img-responsive" alt="">
+                        <img src="images/portfolio.jpeg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -307,7 +307,7 @@
                         <div class="modal-body">
                             <h2>Portfolio</h2>
                             <hr class="star-primary">
-                            <img src="imgage/portfolio.jpeg" class="img-responsive img-centered" alt="">
+                            <img src="imgages/portfolio.jpeg" class="img-responsive img-centered" alt="">
                             <p>Using HTML and CSS with the power of Bootstrap, my portfolio project creates a responsive design that is clear, concise, and informative. Based off of a template, this project has been completely reworked to improve the scalability and fluidity of the user’s browsing experience. Coupled with these aspects, the overall design and color coordination give a long scroll experience that encompasses one-page browsing.</p>
                             <br>
                             <p>When deciding on how to strategically position the content of the webpage to tell “my story”, I happened upon the closed-door image. To me, the closed-door image represents a multitude of unseen possibilities and opportunities. Opening these “doors” is my passion, and in doing so, I have the opportunity to help others find solutions to their web needs. It is finding these solutions that drives me to express my creative talent and assist others in achieving their personal or business web oriented goals.</p>
