--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
     </nav>
 
     <!-- Header -->
-<section>
-<div class="banner">
-    <header>
+<div>
+    <header class="banner">
       <div>
         <div class="container">
             <div class="row">
@@ -106,7 +105,6 @@
         </div>
     </section>
 </div>
-</section>
 
     <!-- Portfolio Grid Section -->
 <div class = "port-background">
