--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     </nav>
 
     <!-- Header -->
-<div>
-    <header class="banner">
+<div class="banner">
+    <header>
       <div>
         <div class="container">
             <div class="row">
