--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
 
     <!-- Header -->
-<div class="banner">
+<section class="banner">
     <header>
       <div>
         <div class="container">
@@ -104,7 +104,7 @@
             </div>
         </div>
     </section>
-</div>
+</section>
 
     <!-- Portfolio Grid Section -->
 <div class = "port-background">
