--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-6 inlineabout">
+                <div class="col-xs-12 col-sm-10">
                   <img class="img-responsive-profile" src="img/profile.png" alt="Jesse Hadley">
                 </div>
                     <div class="col-xs-12 col-sm-8 inline-about">
