--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-8 img-centered-about" title="Jesse Hadley">
+                <div class="col-xs-12 col-sm-8">
+                    <div class="img-centered-about" title="Jesse Hadley">
+                    </div>
                 </div>
             </div>
                 <div class="row">
