--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                     <hr class="star-light">
                 </div>
             </div>
-            <div class="row">
-                <div class="col-xs-12 col-sm-8">
+            <div class="row container-img">
+                <div class="col-xs-12 col-sm-3">
                     <div class="img-centered-about" title="Jesse Hadley">
                     </div>
                 </div>
