--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-8">
-                    <div class="img-centered-about img-responsive" title="Jesse Hadley">
+                    <div class="img-centered-about img-responsive img-rounded" title="Jesse Hadley">
                     </div>
                 </div>
             </div>
