--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <div class="row">
                     <div class="footer-col col-xs-12 col-sm-4">
                         <h3>Location:</h3>
-                        <p>Bountiful, UT</p>
+                        <p>UT, USA</p>
                     </div>
                     <div class="footer-col col-xs-12 col-sm-4">
                         <h3>Let's Connect</h3>
