--- a/index.html
+++ b/index.html
@@ -102,9 +102,11 @@
             </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-8 inline-about">
-                      <p>I am passionate about realizing web solutions through continuous learning. To me, one of the greatest moments of satisfaction is when you see the end result of a project you have built with your own ingenuity and perseverance.</p>
-                        <br>
-                      <p class="paragraph-about">It is this commitment that drives me to excel on each project I work on. The end goal for each project varies, and is why I listen and accommodate the needs of the client to cultivate a business relationship that creates a win-win environment.</p>
+                      <p>Learning while creating web solutions is my passion. Whether you need a responsive Wordpress website or a functional website using Bootstrap, I can help you accomplish these tasks to meet your needs.</p>
+                      <br>
+                      <p>My skills are centered around the implementation of HTML and CSS on the backbone of Bootstrap and Wordpress, design layout, and basic Photoshop manipulations.</p>
+                      <br>
+                      <p>Currently, I am developing my skills in Javascript and have aspirations to become an expert Web Developer using this diverse language. I am especially interested in node.js in order to create spectacular web applications that interact with the server.</p>
                     </div>
                 </div>
         </div>
@@ -313,11 +315,9 @@
                             <h2>Portfolio</h2>
                             <hr class="star-primary">
                             <img src="images/portfolio.jpeg" class="img-responsive img-centered" alt="">
-                            <p>Learning while creating web solutions is my passion. Whether you need a responsive Wordpress website or a functional website using Bootstrap, I can help you accomplish these tasks to meet your needs.</p>
+                            <p>Using HTML and CSS with the power of Bootstrap, my portfolio project creates a responsive design that is clear, concise, and informative. Based off of a template, this project has been completely reworked to improve the scalability and fluidity of the user’s browsing experience. Coupled with these aspects, the overall design and color coordination give a long scroll experience that encompasses one-page browsing.</p>
                             <br>
-                            <p>My skills are centered around the implementation of HTML and CSS on the backbone of Bootstrap and Wordpress, design layout, and basic Photoshop manipulations.</p>
-                            <br>
-                            <p>Currently, I am developing my skills in Javascript and have aspirations to become an expert Web Developer using this diverse language. I am especially interested in node.js in order to create spectacular web applications that interact with the server.</p>
+                            <p>When deciding on how to strategically position the content of the webpage to tell “my story”, I happened upon the closed-door image. To me, the closed-door image represents a multitude of unseen possibilities and opportunities. Opening these “doors” is my passion, and in doing so, I have the opportunity to help others find solutions to their web needs. It is finding these solutions that drives me to express my creative talent and assist others in achieving their personal or business web oriented goals.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong>Portfolio for Jesse Hadley</strong>
